--- a/index.html
+++ b/index.html
@@ -209,8 +209,6 @@ Error message and password prompt
 
 <li>$:/temp/search</li>
 
-<li>$:/temp/tobibeer/preview-1-tiddler</li>
-
 <li>$:/theme</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
@@ -218,8 +216,6 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/vanilla</li>
 
 <li>Atomic Notes</li>
-
-<li>Home</li>
 
 <li>TiddlyWiki</li>
 
@@ -243,8 +239,8 @@ Error message and password prompt
 <div created="20200527074429500" modified="20200527074434000" title="$:/config/EditorTypeMappings/text/vnd.tiddlywiki">
 <pre>comptext</pre>
 </div>
-<div created="20200720183847717" modified="20200720183847717" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
-<pre>show</pre>
+<div created="20200720183847717" modified="20200720184348256" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
+<pre>hide</pre>
 </div>
 <div created="20200720183855320" modified="20200720183855320" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/import">
 <pre>show</pre>
@@ -9628,8 +9624,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200720184103885" modified="20200720184123283" title="$:/DefaultTiddlers">
-<pre>[list[$:/StoryList]]</pre>
+<div created="20200720184103885" modified="20200720184438609" title="$:/DefaultTiddlers">
+<pre></pre>
 </div>
 <div created="20200720182515570" modified="20200720182516683" title="$:/GitHub/Filename">
 <pre>index.html</pre>
@@ -10793,28 +10789,28 @@ Error message and password prompt
 <div created="20200527084422330" modified="20200527084422330" title="$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154">
 <pre>config</pre>
 </div>
-<div created="20200720183740244" modified="20200720184005899" title="$:/state/tab--1963855381">
-<pre>$:/plugins/rmnvsl/krystal/settings</pre>
+<div created="20200720183740244" modified="20200720184409924" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
-<div created="20200527074355500" modified="20200527074355500" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Advanced</pre>
+<div created="20200527074355500" modified="20200720184413668" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
 <div created="20200527074400500" modified="20200527074400500" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" modified="20200720184140403" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Settings</pre>
+<div created="20200527074318200" modified="20200720184501799" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200720182501487" modified="20200720183244355" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20200720183843897" modified="20200720183916246" title="$:/state/tabs/controlpanel/toolbars-1345989671">
-<pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
+<div created="20200720183843897" modified="20200720184345644" title="$:/state/tabs/controlpanel/toolbars-1345989671">
+<pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="Home" title="$:/StoryList">
+<div created="20200720184250808" list="$:/core/ui/MoreSideBar/All TiddlyWiki" modified="20200720184512602" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10880,9 +10876,6 @@ Error message and password prompt
 </div>
 <div created="20200720184224759" modified="20200720184230348" title="$:/temp/search">
 <pre></pre>
-</div>
-<div created="20200720184014833" modified="20200720184043769" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Atomic Notes</pre>
 </div>
 <div created="20200720183734213" modified="20200720183738345" title="$:/theme">
 <pre>$:/themes/tiddlywiki/vanilla</pre>
@@ -11005,9 +10998,6 @@ Error message and password prompt
 This is the kind of idea from Zettelkasten method and are widely adopted right now.
 
 Personally, I found taking atomic notes help me remember things better, since everytime I'm writing, I just need to think about a single think, develop my ideas on it to the best and I don't have to worry about connecting the dots.</pre>
-</div>
-<div created="20200720184237798" modified="20200720184245759" tags="" title="Home">
-<pre>This is the home page</pre>
 </div>
 <div created="20200720182533025" modified="20200720182752817" tags="" title="TiddlyWiki">
 <pre>TiddlyWiki is a simple and single page wiki software that help us create our personal knowledge base on the browser.
