Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Error message and password prompt
 
 <li>Atomic Notes</li>
 
-<li>Bare Metal Raspberry Pi Notes 0449e7ac67ae4bfa8f04ebaaf9cccc5c.md</li>
+<li>Bare Metal Raspberry Pi Notes</li>
 
 <li>Command over SSH</li>
 
@@ -9652,10 +9652,10 @@ Error message and password prompt
 <div created="20200720182504115" modified="20200720182504699" title="$:/GitHub/Username">
 <pre>huytd</pre>
 </div>
-<div status="complete" title="$:/Import">
+<div modified="20200720185126905" status="complete" title="$:/Import">
 <pre>The following tiddlers were imported:
 
-# [[Bare Metal Raspberry Pi Notes 0449e7ac67ae4bfa8f04ebaaf9cccc5c.md]]</pre>
+# [[Bare Metal Raspberry Pi Notes]]</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -10823,7 +10823,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200720184955055" list="$:/Import" modified="20200720184955055" title="$:/StoryList">
+<div created="20200720184955055" list="[[Bare Metal Raspberry Pi Notes]]" modified="20200720185008017" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10884,14 +10884,14 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200720183109304" modified="20200720183109304" title="$:/temp/NewTagName">
+<div created="20200720183109304" modified="20200720185052982" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div created="20200720184224759" modified="20200720184230348" title="$:/temp/search">
 <pre></pre>
 </div>
-<div created="20200720184524387" modified="20200720184750269" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Dockerize your application and Deploy it to Heroku 3132e73c5f6f49979edcd099e85afe9e.md</pre>
+<div created="20200720184524387" modified="20200720185007786" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Bare Metal Raspberry Pi Notes 0449e7ac67ae4bfa8f04ebaaf9cccc5c.md</pre>
 </div>
 <div created="20200720183734213" modified="20200720183738345" title="$:/theme">
 <pre>$:/themes/tiddlywiki/vanilla</pre>
@@ -11015,18 +11015,12 @@ This is the kind of idea from Zettelkasten method and are widely adopted right n
 
 Personally, I found taking atomic notes help me remember things better, since everytime I'm writing, I just need to think about a single think, develop my ideas on it to the best and I don't have to worry about connecting the dots.</pre>
 </div>
-<div title="Bare Metal Raspberry Pi Notes 0449e7ac67ae4bfa8f04ebaaf9cccc5c.md" type="text/x-markdown">
-<pre># Bare Metal Raspberry Pi Notes
-
-Created: Jul 20, 2020 12:00 AM
-Last Edited: Jul 20, 2020 12:38 AM
-Tags: hardware, rust
-
-**VideoCore** is a low-power processor on Raspberry Pi to handle multimedia stuff, some document mentioned it as a GPU of the board. It also supported OpenGL ES.
+<div created="20200720185016346" modified="20200720185126903" tags="hardware rust" title="Bare Metal Raspberry Pi Notes" type="text/vnd.tiddlywiki">
+<pre>**VideoCore** is a low-power processor on Raspberry Pi to handle multimedia stuff, some document mentioned it as a GPU of the board. It also supported OpenGL ES.
 
 Raspberry Pi 4 uses VideoCore VI processor, and it can handle textures as large as 7680x7680 pixels.
 
-[Raspberry Pi VideoCore APIs](https://elinux.org/Raspberry_Pi_VideoCore_APIs)
+[[Raspberry Pi VideoCore APIs|https://elinux.org/Raspberry_Pi_VideoCore_APIs]]
 
 ---
 
@@ -11034,7 +11028,7 @@ Raspberry Pi 4 uses VideoCore VI processor, and it can handle textures as large 
 
 Each mailbox has many **virtual channels**. For example, for framebuffer, LEDs, buttons, touch screen,...
 
-[raspberrypi/documentation](https://github.com/raspberrypi/documentation/tree/JamesH65-mailbox_docs/configuration/mailboxes)
+[[raspberrypi/documentation|https://github.com/raspberrypi/documentation/tree/JamesH65-mailbox_docs/configuration/mailboxes]]
 
 ---
 
