--- a/index.html
+++ b/index.html
@@ -221,8 +221,6 @@ Error message and password prompt
 
 <li>Atomic Notes</li>
 
-<li>Bare Metal Raspberry Pi Notes</li>
-
 <li>Command over SSH</li>
 
 <li>Dockerize your application and Deploy it to Heroku</li>
@@ -249,8 +247,8 @@ Error message and password prompt
 <div created="20200527074429500" modified="20200527074434000" title="$:/config/EditorTypeMappings/text/vnd.tiddlywiki">
 <pre>comptext</pre>
 </div>
-<div created="20200720183847717" modified="20200720184348256" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
-<pre>hide</pre>
+<div created="20200720183847717" modified="20200720190002289" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
+<pre>show</pre>
 </div>
 <div created="20200720183855320" modified="20200720183855320" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/import">
 <pre>show</pre>
@@ -9637,8 +9635,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200720184103885" modified="20200720184438609" title="$:/DefaultTiddlers">
-<pre></pre>
+<div created="20200720184103885" modified="20200720185957450" title="$:/DefaultTiddlers">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
 <div created="20200720182515570" modified="20200720182516683" title="$:/GitHub/Filename">
 <pre>index.html</pre>
@@ -9652,10 +9650,10 @@ Error message and password prompt
 <div created="20200720182504115" modified="20200720182504699" title="$:/GitHub/Username">
 <pre>huytd</pre>
 </div>
-<div modified="20200720185126905" status="complete" title="$:/Import">
+<div modified="20200720184811179" status="complete" title="$:/Import">
 <pre>The following tiddlers were imported:
 
-# [[Bare Metal Raspberry Pi Notes]]</pre>
+# [[Dockerize your application and Deploy it to Heroku]]</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -10802,8 +10800,8 @@ Error message and password prompt
 <div created="20200527084422330" modified="20200527084422330" title="$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154">
 <pre>config</pre>
 </div>
-<div created="20200720183740244" modified="20200720184409924" title="$:/state/tab--1963855381">
-<pre>$:/core/ui/ControlPanel/Palette</pre>
+<div created="20200720183740244" modified="20200720190000852" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Toolbars</pre>
 </div>
 <div created="20200527074355500" modified="20200720184413668" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
@@ -10811,8 +10809,8 @@ Error message and password prompt
 <div created="20200527074400500" modified="20200527074400500" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" modified="20200720184501799" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200527074318200" modified="20200720185959269" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20200720182501487" modified="20200720183244355" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -10823,7 +10821,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200720184955055" list="[[Bare Metal Raspberry Pi Notes]]" modified="20200720185008017" title="$:/StoryList">
+<div created="20200720185953888" list="$:/ControlPanel" modified="20200720185953888" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10884,14 +10882,14 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200720183109304" modified="20200720185052982" title="$:/temp/NewTagName">
+<div created="20200720183109304" modified="20200720183109304" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div created="20200720184224759" modified="20200720184230348" title="$:/temp/search">
 <pre></pre>
 </div>
-<div created="20200720184524387" modified="20200720185007786" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Bare Metal Raspberry Pi Notes 0449e7ac67ae4bfa8f04ebaaf9cccc5c.md</pre>
+<div created="20200720184524387" modified="20200720184750269" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Dockerize your application and Deploy it to Heroku 3132e73c5f6f49979edcd099e85afe9e.md</pre>
 </div>
 <div created="20200720183734213" modified="20200720183738345" title="$:/theme">
 <pre>$:/themes/tiddlywiki/vanilla</pre>
@@ -11014,64 +11012,6 @@ Error message and password prompt
 This is the kind of idea from Zettelkasten method and are widely adopted right now.
 
 Personally, I found taking atomic notes help me remember things better, since everytime I'm writing, I just need to think about a single think, develop my ideas on it to the best and I don't have to worry about connecting the dots.</pre>
-</div>
-<div created="20200720185016346" modified="20200720185126903" tags="hardware rust" title="Bare Metal Raspberry Pi Notes" type="text/vnd.tiddlywiki">
-<pre>**VideoCore** is a low-power processor on Raspberry Pi to handle multimedia stuff, some document mentioned it as a GPU of the board. It also supported OpenGL ES.
-
-Raspberry Pi 4 uses VideoCore VI processor, and it can handle textures as large as 7680x7680 pixels.
-
-[[Raspberry Pi VideoCore APIs|https://elinux.org/Raspberry_Pi_VideoCore_APIs]]
-
----
-
-**Mailboxes** are the communication mechanism between the processor and VideoCore. There are two mailboxes on a Pi, call it `M0` (to handle communication from VideoCore to processor) and `M1` (for the other way).
-
-Each mailbox has many **virtual channels**. For example, for framebuffer, LEDs, buttons, touch screen,...
-
-[[raspberrypi/documentation|https://github.com/raspberrypi/documentation/tree/JamesH65-mailbox_docs/configuration/mailboxes]]
-
----
-
-To use QEMU to setup a Raspberry Pi emulator:
-
-[Emulate Raspberry Pi with QEMU](https://azeria-labs.com/emulate-raspberry-pi-with-qemu/)
-
-[Using QEMU to emulate a Raspberry Pi](https://blog.agchapman.com/using-qemu-to-emulate-a-raspberry-pi/)
-
----
-
-To compile Rust for bare metal Raspberry Pi, we need to use `arm-unknown-linux-gnueabihf` target.
-
-```rust
-$ rustup target add arm-unknown-linux-gnueabihf
-```
-
----
-
-Since we're not directly compile our code to a binary, we should point it out in the code:
-
-```rust
-#![crate_type = &quot;staticlib&quot;]
-```
-
-In the linker process, there's also a function that needed, so we're required to do something like:
-
-```rust
-#[no_mangle]
-pub extern fn __aeabi_unwind_cpp_pr0() {}
-```
-
-More on this later
-
----
-
-Some good resources to get started with bare metal programming:
-
-[Raspberry Pi 3 Bare Metal - Part 1](https://adamransom.github.io/posts/raspberry-pi-bare-metal-part-1.html)
-
-[Raspberry Pi 3 Bare Metal in Rust](https://zhuohua.me/post/raspberry-pi-3-bare-metal-in-rust/)
-
-[seankerr/rust-rpi-examples](https://github.com/seankerr/rust-rpi-examples)</pre>
 </div>
 <div created="20200720184703142" modified="20200720184733137" tags="linux" title="Command over SSH" type="text/x-markdown">
 <pre>You can execute any command over SSH, and if you setup your SSH key for the SSH access, it would be more safe and quicker. For example, I have a `dokku` command that I run regularly over SSH.
