Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -11549,7 +11549,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200720190539453" list="$:/core/ui/SideBar/Recent [[Command over SSH]]" modified="20200720190544043" title="$:/StoryList">
+<div created="20200720190539453" list="$:/core/ui/SideBar/Recent [[Dockerize your application and Deploy it to Heroku]]" modified="20200720190653262" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12566,8 +12566,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200720190106742" modified="20200720190106742" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200720184524387" modified="20200720190544454" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Command over SSH</pre>
+<div created="20200720184524387" modified="20200720190652743" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Dockerize your application and Deploy it to Heroku</pre>
 </div>
 <div created="20200720183734213" modified="20200720183738345" title="$:/theme">
 <pre>$:/themes/tiddlywiki/vanilla</pre>
@@ -12782,15 +12782,15 @@ From now on, every time I want to run `dokku` command, I just run it locally, fo
 dokku-remote apps:create awesome-app
 ```</pre>
 </div>
-<div created="20200720184757490" modified="20200720184811178" tags="linux" title="Dockerize your application and Deploy it to Heroku" type="text/x-markdown">
+<div created="20200720184757490" modified="20200720190804204" tags="linux" title="Dockerize your application and Deploy it to Heroku" type="text/vnd.tiddlywiki">
 <pre>There are various reasons you want to deploy your application as a Docker container on Heroku, one of the reasonable looking one is you want to mess with a language that doesn't officially supported by Heroku yet.
 
 ---
 
 The steps of doing so is simple:
 
-1. Dockerize your application — build it to a Docker image
-2. Push that Docker image to Heroku
+* Dockerize your application — build it to a Docker image
+* Push that Docker image to Heroku
 
 For the sake of simplicity, in this article, I'm showing you how to Dockerize a NodeJS application and deploy it to Heroku, ignoring the fact that NodeJS was supported by Heroku from almost its day-1.
 
